--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -4,7 +4,7 @@ CFLAGS=@CFLAGS@ -pedantic -Wall -W -Wstrict-prototypes -Wunused -Wshadow -Wmissi
 CXXFLAGS=@CXXFLAGS@ @BFD_CXXFLAGS@ -ansi -Wall -W -Wunused -Wmissing-prototypes
 LIBS=-lpopt -lbfd -liberty -ldl
 MY_SOURCES=oprofpp.cpp oprofpp_util.cpp
-OBJS=../events/op_events.o ../events/op_events_desc.o ../dae/opd_util.o oprofpp_util.o ../util/op_popt.o ../util/file_manip.o
+OBJS=../events/op_events.o ../events/op_events_desc.o ../dae/opd_util.o oprofpp_util.o ../util/op_popt.o ../util/file_manip.o  ../util/string_manip.o ../util/misc.o
 
 all: $(INSTALL_LIST)
 
@@ -32,7 +32,7 @@ oprofpp-src.html: $(MY_SOURCES)
 oprofpp: oprofpp.o $(OBJS)
 	$(CXX) $(CXXFLAGS) $^ -o $@ $(LIBS)
 
-oprof_convert: oprof_convert.o ../dae/opd_util.o ../util/file_manip.o
+oprof_convert: oprof_convert.o ../dae/opd_util.o ../util/misc.o ../util/file_manip.o  ../util/string_manip.o
 	$(CXX) $(CXXFLAGS) $^ -o $@ $(LIBS)
 
 op_to_source: opf_filter.o opf_container.o ../util/child_reader.o $(OBJS) \
