--- a/util/Makefile.in
+++ b/util/Makefile.in
@@ -1,9 +1,9 @@
 CXXFLAGS=@CXXFLAGS@ -Wall -pedantic -W -Wunused -Wmissing-prototypes
-CFLAGS=-ansi -pedantic -Wall -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
+CFLAGS=-pedantic -Wall -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
 
 .PHONY: all clean install
 
-all: string_manip.o child_reader.o file_manip.o op_popt.o
+all: string_manip.o child_reader.o file_manip.o op_popt.o misc.o
 
 clean: 
 	rm -f *.o *.d
@@ -16,6 +16,6 @@ install: all
 %.o: %cpp
 	$(CXX) -c $(CXXFLAGS) -g $< -o $@
 
-ALL_SOURCES = string_manip.cpp file_manip.cpp child_reader.cpp op_popt.c
+ALL_SOURCES = string_manip.cpp file_manip.cpp child_reader.cpp op_popt.c misc.c
 
 include ../Rules.make
