--- a/dae/Makefile.in
+++ b/dae/Makefile.in
@@ -1,11 +1,11 @@
-# $Id: Makefile.in,v 1.26 2002/01/04 19:02:49 movement Exp $
+# $Id: Makefile.in,v 1.27 2002/01/04 19:54:06 phil_e Exp $
 
 INSTALL_LIST=oprofiled op_start op_dump op_stop
 
 CFLAGS=-Wall -Wstrict-prototypes -pipe -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
 LIBS=@extra_libraries@ -lpopt -liberty
 
-SOURCES=oprofiled.c opd_util.c opd_proc.c
+SOURCES=oprofiled.c opd_util.c opd_proc.c opd_kernel.c
 OBJS=oprofiled.o opd_util.o opd_proc.o opd_kernel.o ../events/op_events.o ../events/op_events_desc.o ../util/op_popt.o ../util/misc.o
 
 .PHONY: all clean srcdoc install uninstall
