--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.63 2002/01/08 19:49:55 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.64 2002/01/09 18:34:22 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./op_user.h)
 
@@ -18,7 +18,7 @@ AC_CONFIG_HEADER(config.h)
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 PACKAGE=oprofile
-VERSION=0.0.8
+VERSION=0.0.9cvs
 
 dnl for the man page
 DATE="`date '+%a %d %B %Y'`"
