--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,10 +1,14 @@
-# $Id: Makefile.in,v 1.5 2001/12/31 06:37:27 movement Exp $
+# $Id: Makefile.in,v 1.6 2002/01/10 03:47:13 phil_e Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
 
+# ugly: in 2.2 only one object file must be compiled with module version,
+# NO_MODULE_VERSION expand to __NO_VERSION__ in this case, this work
+# because only one module is compiled with BKCFLAGS. If you compile more
+# than one module with BKCFLAGS you break 2.2 compatibility. FIXME another way?
 BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
-KCFLAGS := $(BKCFLAGS) -march=i686
+KCFLAGS := $(BKCFLAGS) -march=i686 @NO_MODULE_VERSION@
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
 
 .PHONY: all install clean uninstall
