--- a/Rules.make.in
+++ b/Rules.make.in
@@ -14,6 +14,7 @@ INCLUDES=@extra_includes@
 # CFLAGS and CXXFLAGS are defined in each Makefile.
 
 # autodeps rules. These are modified from an example in the make info page.
+# FIXME: kernel headers in userspace, don't do it :) 
 CPPFLAGS_DEPS = -I@KINC@ @extra_includes@
 
 .deps/%.cpp.d: %.cpp
