--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.6 2002/01/10 03:47:13 phil_e Exp $
+# $Id: Makefile.in,v 1.7 2002/01/11 02:11:28 phil_e Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -9,7 +9,8 @@ MODINSTALLDIR=@MODINSTALLDIR@/oprofile
 # than one module with BKCFLAGS you break 2.2 compatibility. FIXME another way?
 BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
 KCFLAGS := $(BKCFLAGS) -march=i686 @NO_MODULE_VERSION@
-ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
+# FIXME, we lacked to pass kernel include dir, it is safe to pass BKCLAGS to get it
+ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional $(BKCFLAGS)
 
 .PHONY: all install clean uninstall
 
