--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.9 2002/01/15 18:31:12 movement Exp $
+# $Id: Makefile.in,v 1.10 2002/01/17 02:33:05 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -47,7 +47,7 @@ op_rtc.o: op_rtc.c
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 # can't use auto deps here
-oprofile_c.o: oprofile.c oprofile.h ../op_user.h
+oprofile_c.o: oprofile.c oprofile.h ../op_user.h compat.h compat22.h compat24.h
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 op_x86.o: op_x86.c
