--- a/doc/oprofile.1.in
+++ b/doc/oprofile.1.in
@@ -208,7 +208,7 @@ exclude list of comma separated symbol
 base directory of profile daemon
 .PP
 .br
-.BI "--show-shared-libs -h"
+.BI "--show-shared-libs -k"
 Show the details for each shared lib which belongs to one application. This option is useful only if you have profiled with --separate-samples option and you specify on the oprofpp command line either --list-symbols or --list-all-symbols-details.
 .TP
 .br
@@ -297,7 +297,7 @@ Show help message
 which counter to use for sorting purposes
 .TP
 .br
-.BI "--show-shared-libs -h"
+.BI "--show-shared-libs -k"
 Show the details for each shared lib which belongs to one application. This option is usefull only if you have profiled with --separate-samples option
 .TP
 .br
